# tetris-pygame

./: README.md  index.html  main.py  pyproject.toml  tetris_pygame.apk
.github/workflows/: deploy-pygame.yml
src/tetris_pygame/: __main__.py  main.py
